--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,12 @@
 /[Bb]uilds/
 /[Ll]ogs/
 /[Mm]emoryCaptures/
+Library/
+Logs/
+Temp/
+Builds/*
+UserSettings/
+Debug/
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
@@ -58,3 +64,5 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+# Project Specific
+EXAMPLES/
