--- a/Capstone-Game/ProjectSettings/Packages/com.unity.polybrush/Settings.json
+++ b/Capstone-Game/ProjectSettings/Packages/com.unity.polybrush/Settings.json
@@ -101,7 +101,7 @@
             {
                 "type": "UnityEditor.Polybrush.PrefabLoadout, Unity.Polybrush.Editor, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ScatteringEditor.userLoadout",
-                "value": "{\"m_Value\":{\"infos\":[{\"palette\":{\"fileID\":11400000,\"guid\":\"eb30f1e6c5ac352438328d8152e47e22\",\"type\":2},\"prefab\":{\"fileID\":519052635182701490,\"guid\":\"3a20843f67d9f7b42a460b5709511877\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"eb30f1e6c5ac352438328d8152e47e22\",\"type\":2},\"prefab\":{\"fileID\":3698917680147567752,\"guid\":\"995c7f8eac9aef24297f64811c5df5c8\",\"type\":3}}]}}"
+                "value": "{\"m_Value\":{\"infos\":[]}}"
             },
             {
                 "type": "System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
