Removed Ball on Ramp

--- a/Capstone-Game/ProjectSettings/Packages/com.unity.polybrush/Settings.json
+++ b/Capstone-Game/ProjectSettings/Packages/com.unity.polybrush/Settings.json
@@ -101,7 +101,7 @@
             {
                 "type": "UnityEditor.Polybrush.PrefabLoadout, Unity.Polybrush.Editor, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ScatteringEditor.userLoadout",
-                "value": "{\"m_Value\":{\"infos\":[]}}"
+                "value": "{\"m_Value\":{\"infos\":[{\"palette\":{\"fileID\":11400000,\"guid\":\"eb30f1e6c5ac352438328d8152e47e22\",\"type\":2},\"prefab\":{\"fileID\":1000012376307238,\"guid\":\"a082d0f34409cf54898f92b3e070758a\",\"type\":3}}]}}"
             },
             {
                 "type": "System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
