--- a/Capstone-Game/ProjectSettings/Packages/com.unity.polybrush/Settings.json
+++ b/Capstone-Game/ProjectSettings/Packages/com.unity.polybrush/Settings.json
@@ -26,7 +26,7 @@
             {
                 "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "Scattering.UsePivotForPlacement",
-                "value": "{\"m_Value\":false}"
+                "value": "{\"m_Value\":true}"
             },
             {
                 "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
@@ -36,7 +36,7 @@
             {
                 "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "Scattering.AvoidOverlappingObjects",
-                "value": "{\"m_Value\":true}"
+                "value": "{\"m_Value\":false}"
             },
             {
                 "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
@@ -101,7 +101,7 @@
             {
                 "type": "UnityEditor.Polybrush.PrefabLoadout, Unity.Polybrush.Editor, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ScatteringEditor.userLoadout",
-                "value": "{\"m_Value\":{\"infos\":[{\"palette\":{\"fileID\":11400000,\"guid\":\"eb30f1e6c5ac352438328d8152e47e22\",\"type\":2},\"prefab\":{\"fileID\":6513769277071589074,\"guid\":\"4755c6485162a10459ce63286ffa4d1e\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"eb30f1e6c5ac352438328d8152e47e22\",\"type\":2},\"prefab\":{\"fileID\":8148612433506349122,\"guid\":\"3c05513e0abfcd94d8a728cbd2aec092\",\"type\":3}}]}}"
+                "value": "{\"m_Value\":{\"infos\":[{\"palette\":{\"fileID\":11400000,\"guid\":\"eb30f1e6c5ac352438328d8152e47e22\",\"type\":2},\"prefab\":{\"fileID\":7240947560827918979,\"guid\":\"ba40024b8ed5c1843be798c3c3c3ffd0\",\"type\":3}}]}}"
             },
             {
                 "type": "System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
