--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@
 Library/
 Logs/
 Temp/
-Builds/*
+*/Builds/*
 UserSettings/
 Debug/
 
@@ -66,3 +66,4 @@ crashlytics-build.properties
 
 # Project Specific
 EXAMPLES/
+Capstone-Game/SquirrelvilleController.zip
