--- a/Capstone-Game/ProjectSettings/Packages/com.unity.polybrush/Settings.json
+++ b/Capstone-Game/ProjectSettings/Packages/com.unity.polybrush/Settings.json
@@ -101,7 +101,7 @@
             {
                 "type": "UnityEditor.Polybrush.PrefabLoadout, Unity.Polybrush.Editor, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ScatteringEditor.userLoadout",
-                "value": "{\"m_Value\":{\"infos\":[{\"palette\":{\"fileID\":11400000,\"guid\":\"eb30f1e6c5ac352438328d8152e47e22\",\"type\":2},\"prefab\":{\"fileID\":2148675533388391810,\"guid\":\"5b597216026d6b44699383839ad1d343\",\"type\":3}}]}}"
+                "value": "{\"m_Value\":{\"infos\":[{\"palette\":{\"fileID\":11400000,\"guid\":\"eb30f1e6c5ac352438328d8152e47e22\",\"type\":2},\"prefab\":{\"fileID\":7289110310726518601,\"guid\":\"0980689bd6daa2d45b8c097393ede069\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"eb30f1e6c5ac352438328d8152e47e22\",\"type\":2},\"prefab\":{\"fileID\":6428877858224272332,\"guid\":\"da7b9e0669fa5e94794e10c0e4b2a019\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"eb30f1e6c5ac352438328d8152e47e22\",\"type\":2},\"prefab\":{\"fileID\":6488387626894039347,\"guid\":\"d825e5c263abc254eb93e1967ad8ab19\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"eb30f1e6c5ac352438328d8152e47e22\",\"type\":2},\"prefab\":{\"fileID\":1592580129405344002,\"guid\":\"7aa672c1c7e55dc46b79353af47e3533\",\"type\":3}}]}}"
             },
             {
                 "type": "System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
